<resources>
    <string name="app_cloner">Spider</string>
    <string name="hello_world">Hello World!</string>
    <string name="dark_light_mode">Night Mode</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="login">Login</string>
    <string name="donation">Donation</string>
    <string name="share">Share</string>
    <string name="about_us">About us</string>
    <string name="exit">Exit</string>
    <string name="others">Others</string>
    <string name="todo">TODO</string>
    <string name="programmerjibon">ProgrammerJibon</string>
    <string name="app_name">Spider Studio</string>
    <string name="enterfilelink">EnterFileLink</string>
    <bool name="dark_mode">false</bool>
    <bool name="light_mode">true</bool>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="page_title">Page Title</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cant_connect">Can\'t connect to the server...</string>
    <string name="retry">Retry</string>
    <string name="pageTitle">Page Title</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register_for_an_account">Register for an account</string>
    <string name="can_t_remember_password">Can\'t remember password?</string>
    <string name="restore_password">restore password</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="year">Year</string>
    <string name="select_country">Select Country</string>
    <string name="select_city">Select City:</string>
    <string name="select_country_">Select Country:</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="enter_a_strong_password_and_never_share_it">Enter a strong password and never share it</string>
    <string name="re_enter_password_never_share_with_us_too">Re-enter password - Never share with us too</string>
    <string name="loading">Loading</string>
</resources>